[gd_scene load_steps=5 format=3 uid="uid://cc0osc8mgosst"]

[ext_resource type="StyleBox" uid="uid://e5bltd1uh6qj" path="res://resources/themes/MenuFrame.tres" id="1_2dk4e"]
[ext_resource type="Script" path="res://scripts/menus/MainMenu.gd" id="1_oqife"]
[ext_resource type="Theme" uid="uid://dbrhpn2cakki" path="res://resources/themes/game_theme.tres" id="3_rl0ly"]
[ext_resource type="FontFile" uid="uid://qmp5jybxhv3t" path="res://resources/fonts/Beyond Wonderland.ttf" id="4_g8vm3"]

[node name="MainMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_2dk4e")
script = ExtResource("1_oqife")
metadata/_edit_horizontal_guides_ = [-20.0]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = ExtResource("3_rl0ly")
theme_override_colors/font_color = Color(0.955963, 0.955963, 0.955963, 1)
theme_override_fonts/font = ExtResource("4_g8vm3")
theme_override_font_sizes/font_size = 64
text = "Art Of War"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="PartyId" type="LineEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 36)
layout_mode = 2
placeholder_text = "Party ID"
alignment = 1

[node name="ConnectionStatus" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.992157, 0.992157, 0.992157, 1)
horizontal_alignment = 1
